@@ -45,65 +45,62 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
     private static Field heightRange_heightField;
     private static Field uniformHeight_minInclusiveField;
     private static Field uniformHeight_maxInclusiveField;
+    private static final float MAX_BONUS_MULTIPLIER = 3.0f;
+    private static final int EFFECTIVE_DISTANCE = 10;
 
     public OreNodeFeature(Codec<OreNodeConfiguration> codec) {
         super(codec);
     }
-
 
     @Override
     public boolean place(FeaturePlaceContext<OreNodeConfiguration> context) {
         WorldGenLevel level = context.level();
         BlockPos origin = context.origin();
         OreNodeConfiguration config = context.config();
-        RandomSource randomSource = context.random();
+        RandomSource random = context.random();
 
-        // [수정] 노드를 배치하기 전의 원래 블록을 배경으로 저장
         BlockState backgroundState = level.getBlockState(origin);
         if (!backgroundState.isSolidRender(level, origin)) {
             return false;
         }
         Block backgroundBlock = backgroundState.getBlock();
 
-        Map<Item, Float> composition = scanAndGenerateComposition(context, origin, randomSource);
-        if (composition.isEmpty()) {
-            composition.put(Items.RAW_IRON, 1.0f);
-        }
-
-        int totalYield = config.totalYield().sample(randomSource);
-        int miningResistance = config.miningResistance().sample(randomSource);
-
-        // [수정] 대표 광물 블록 찾기
-        Block representativeOreBlock = findRepresentativeOreBlock(composition, level);
-
         level.setBlock(origin, MyAddonBlocks.ORE_NODE.get().defaultBlockState(), 3);
         BlockEntity be = level.getBlockEntity(origin);
+
         if (be instanceof OreNodeBlockEntity nodeBE) {
-            // [수정] configure 메서드에 블록 정보 전달
-            nodeBE.configure(composition, totalYield, miningResistance, backgroundBlock, representativeOreBlock);
+            Map<Item, Float> composition = scanAndGenerateComposition(context, origin, random);
+            if (composition.isEmpty()) {
+                composition.put(Items.RAW_IRON, 1.0f);
+            }
+            Block representativeOreBlock = findRepresentativeOreBlock(composition, level);
+
+            // 노드에 적용할 특성들을 무작위로 생성
+            int maxYield = config.totalYield().sample(random);
+            float hardness = 0.5f + random.nextFloat() * 1.5f;
+            float richness = 0.8f + random.nextFloat() * 0.7f;
+            float regeneration = random.nextFloat() < 0.2f ? (0.00025f + random.nextFloat() * 0.00075f) : 0f;
+
+            // configure 메서드를 호출하여 노드에 특성을 주입
+            nodeBE.configure(composition, maxYield, hardness, richness, regeneration, backgroundBlock, representativeOreBlock);
             return true;
         }
 
         return false;
     }
 
-    // --- [추가] 대표 광물 블록을 찾는 헬퍼 메서드 ---
     private Block findRepresentativeOreBlock(Map<Item, Float> composition, WorldGenLevel level) {
-        // 가장 비율이 높은 광물을 찾습니다.
         Optional<Map.Entry<Item, Float>> maxEntry = composition.entrySet()
                 .stream()
                 .max(Map.Entry.comparingByValue());
 
         if (maxEntry.isPresent()) {
             Item representativeItem = maxEntry.get().getKey();
-
-            // 제련 레시피를 역으로 탐색하여 해당 원시 광물에 대한 '광석 블록'을 찾습니다.
-            // 예: raw_iron -> iron_ore block
-            var recipeManager = Objects.requireNonNull(level.getServer()).getRecipeManager();
+            var recipeManager = level.getServer().getRecipeManager();
             for (var recipeHolder : recipeManager.getAllRecipesFor(RecipeType.SMELTING)) {
                 SmeltingRecipe recipe = recipeHolder.value();
                 if (recipe.getResultItem(level.registryAccess()).is(representativeItem)) {
-                    ItemStack ingredient = recipe.getIngredients().getFirst().getItems()[0];
+                    ItemStack ingredient = recipe.getIngredients().get(0).getItems()[0];
                     Block block = Block.byItem(ingredient.getItem());
                     if (block != Blocks.AIR) {
                         return block;
@@ -111,15 +108,8 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
                 }
             }
         }
-
-        // 못찾으면 기본값 반환
         return Blocks.IRON_ORE;
     }
-
-
-    private static final float MAX_BONUS_MULTIPLIER = 3.0f; // 깊이가 완벽하게 일치할 때 가중치에 곱해지는 최대 배수 (기본 가중치 10.0f -> 최대 30.0f)
-    private static final int EFFECTIVE_DISTANCE = 10; // 이 거리(블록)를 벗어나면 깊이 보너스가 거의 적용되지 않습니다.
-
 
     private Map<Item, Float> scanAndGenerateComposition(FeaturePlaceContext<OreNodeConfiguration> context, BlockPos pos, RandomSource randomSource) {
         WorldGenLevel level = context.level();
@@ -130,11 +120,11 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
         HolderSet<PlacedFeature> oreFeatures = generationSettings.features().get(GenerationStep.Decoration.UNDERGROUND_ORES.ordinal());
 
         Map<Item, Float> weightedSelection = new HashMap<>();
-
         WorldGenerationContext worldGenContext = new WorldGenerationContext(context.chunkGenerator(), level);
 
         var registryAccess = context.level().registryAccess();
         var blockRegistry = registryAccess.registryOrThrow(Registries.BLOCK);
+
         for (Holder<PlacedFeature> placedFeatureHolder : oreFeatures) {
             Optional<PlacedFeature> placedFeatureOpt = placedFeatureHolder.unwrapKey().flatMap(level.registryAccess().registryOrThrow(Registries.PLACED_FEATURE)::getOptional);
             if (placedFeatureOpt.isEmpty()) continue;
@@ -148,10 +138,9 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
                     Item oreItem = getOreItem(oreBlock, level);
 
                     if (oreItem != Items.AIR) {
-
                         TagKey<Block> oresTag = TagKey.create(Registries.BLOCK, ResourceLocation.fromNamespaceAndPath("c", "ores"));
                         float baseWeight = blockRegistry.wrapAsHolder(oreBlock).is(oresTag) ? 10.0f : 0.5f;
-                        // 깊이 보너스 계산
+
                         int averageOreY = getAverageOreDepth(placedFeature, worldGenContext);
                         float depthMultiplier = 1.0f;
 
@@ -170,7 +159,6 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
             }
         }
 
-        // 최종 조합 생성
         if (weightedSelection.isEmpty()) return Collections.emptyMap();
         Random random = new Random(randomSource.nextLong());
         int oreTypeCount = 1 + random.nextInt(Math.min(3, weightedSelection.size()));
@@ -189,27 +177,16 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
         return finalComposition;
     }
 
-    /**
-     * PlacedFeature의 배치 설정자를 분석하여 평균 생성 높이를 추정합니다.
-     * (정확한 2단계 리플렉션을 사용하는 최종 안정화 버전)
-     *
-     * @param feature 분석할 PlacedFeature
-     * @param context Y 좌표 계산에 필요한 WorldGenerationContext
-     * @return 계산된 평균 Y 좌표. 찾지 못하면 Integer.MIN_VALUE 반환.
-     */
     private int getAverageOreDepth(PlacedFeature feature, WorldGenerationContext context) {
         for (PlacementModifier modifier : feature.placement()) {
             if (modifier instanceof HeightRangePlacement heightRange) {
                 try {
-                    // --- 1단계: HeightRangePlacement에서 'height' 필드 가져오기 ---
                     if (heightRange_heightField == null) {
                         heightRange_heightField = HeightRangePlacement.class.getDeclaredField("height");
                         heightRange_heightField.setAccessible(true);
                     }
-                    // height 필드에서 HeightProvider 객체를 가져옴
                     Object heightProvider = heightRange_heightField.get(heightRange);
 
-                    // --- 2단계: 가져온 객체가 UniformHeight일 경우, 내부 필드 접근 ---
                     if (heightProvider instanceof UniformHeight uniformHeight) {
                         if (uniformHeight_minInclusiveField == null) {
                             uniformHeight_minInclusiveField = UniformHeight.class.getDeclaredField("minInclusive");
@@ -220,7 +197,6 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
                             uniformHeight_maxInclusiveField.setAccessible(true);
                         }
 
-                        // uniformHeight 객체에서 VerticalAnchor 객체들을 가져옴
                         VerticalAnchor minAnchor = (VerticalAnchor) uniformHeight_minInclusiveField.get(uniformHeight);
                         VerticalAnchor maxAnchor = (VerticalAnchor) uniformHeight_maxInclusiveField.get(uniformHeight);
 
@@ -231,20 +207,13 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
                     }
 
                 } catch (NoSuchFieldException | IllegalAccessException e) {
-                    // 이 오류는 이제 발생하지 않아야 하지만, 안전을 위해 남겨둡니다.
-//                    e.printStackTrace();
+                    e.printStackTrace();
                     return Integer.MIN_VALUE;
                 }
             }
         }
         return Integer.MIN_VALUE;
     }
-    /**
-     * 제련 레시피를 역추적하여 광석 블록에 해당하는 아이템을 자동으로 찾아 반환합니다.
-     * @param oreBlock 광석 블록
-     * @param level 월드 레벨
-     * @return 해당하는 광물 아이템
-     */
 
     private Item getOreItem(Block oreBlock, WorldGenLevel level) {
         Item oreBlockItem = oreBlock.asItem();
@@ -252,41 +221,28 @@ public class OreNodeFeature extends Feature<OreNodeConfiguration> {
             return Items.AIR;
         }
 
-        // 서버의 레시피 매니저에 접근합니다.
-        // 레시피 데이터는 월드 생성 중에도 안전하게 읽을 수 있습니다.
-        var recipeManager = Objects.requireNonNull(level.getServer()).getRecipeManager();
+        var recipeManager = level.getServer().getRecipeManager();
 
-        // 모든 제련 레시피(SmeltingRecipe)를 순회합니다.
         for (var recipeHolder : recipeManager.getAllRecipesFor(RecipeType.SMELTING)) {
             SmeltingRecipe recipe = recipeHolder.value();
 
-            // 레시피의 '재료'가 현재 '광석 블록 아이템'과 일치하는지 확인합니다.
-            if (recipe.getIngredients().getFirst().test(new ItemStack(oreBlockItem))) {
-                // 레시피의 '결과물' (예: 철 주괴)을 가져옵니다.
+            if (recipe.getIngredients().get(0).test(new ItemStack(oreBlockItem))) {
                 ItemStack resultStack = recipe.getResultItem(level.registryAccess());
                 Item resultItem = resultStack.getItem();
 
-                // 결과물이 주괴(Ingot)라면, 해당하는 원시 광물(Raw Material)을 찾아 반환합니다.
-                // 이것은 이름 기반의 규칙이지만, 대부분의 모드가 이 명명 규칙을 따릅니다.
                 ResourceLocation resultId = BuiltInRegistries.ITEM.getKey(resultItem);
                 if (resultId.getPath().endsWith("_ingot")) {
                     String rawMaterialName = resultId.getPath().replace("_ingot", "");
-                    // 예: "iron_ingot" -> "raw_iron"
                     ResourceLocation rawId = ResourceLocation.fromNamespaceAndPath(resultId.getNamespace(), "raw_" + rawMaterialName);
 
                     Item rawItem = BuiltInRegistries.ITEM.get(rawId);
-                    // 만약 해당하는 원시 광물이 존재한다면 그것을 반환합니다.
                     if (rawItem != Items.AIR) {
                         return rawItem;
                     }
                 }
-                // 주괴가 아니거나(예: 다이아몬드), 원시 광물이 없는 경우, 제련 결과물 자체를 반환합니다.
                 return resultItem;
             }
         }
-
-        // 제련 레시피를 찾지 못한 경우, 최후의 수단으로 블록 아이템 자신을 반환합니다.
         return oreBlockItem;
     }
-
 }
